crates/oxvg_optimiser/src/jobs/snapshots/oxvg_optimiser__jobs__move_group_attrs_to_elems__move_group_attrs_to_elems-2.snap
---
source: crates/oxvg_optimiser/src/jobs/move_group_attrs_to_elems.rs
expression: "test_config(r#\"{ \"moveGroupAttrsToElems\": true }\"#,\nSome(r#\"<svg xmlns=\"http://www.w3.org/2000/svg\">\n    <!-- add transform to children of `g` -->\n    <g transform=\"scale(2)\">\n        <path d=\"M0,0 L10,20\"/>\n        <path d=\"M0,10 L20,30\"/>\n    </g>\n</svg>\"#),)?"
---
<svg xmlns="http://www.w3.org/2000/svg">
    <!-- add transform to children of `g` -->
    <g>
        <path d="M0,0 L10,20" transform="scale(2)"/>
        <path d="M0,10 L20,30" transform="scale(2)"/>
    </g>
</svg>
