crates/oxvg_optimiser/src/jobs/snapshots/oxvg_optimiser__jobs__move_group_attrs_to_elems__move_group_attrs_to_elems-4.snap
---
source: crates/oxvg_optimiser/src/jobs/move_group_attrs_to_elems.rs
expression: "test_config(r#\"{ \"moveGroupAttrsToElems\": true }\"#,\nSome(r#\"<svg xmlns=\"http://www.w3.org/2000/svg\">\n    <!-- move transform through multiple `g`s -->\n    <g transform=\"rotate(30)\">\n        <g>\n            <g transform=\"scale(2)\">\n                <path d=\"M0,0 L10,20\"/>\n                <path d=\"M0,10 L20,30\"/>\n            </g>\n        </g>\n        <path d=\"M0,10 L20,30\"/>\n    </g>\n</svg>\"#),)?"
---
<svg xmlns="http://www.w3.org/2000/svg">
    <!-- move transform through multiple `g`s -->
    <g>
        <g>
            <g>
                <path d="M0 0 10 20" transform="rotate(30)scale(2)"/>
                <path d="M0 10 20 30" transform="rotate(30)scale(2)"/>
            </g>
        </g>
        <path d="M0 10 20 30" transform="rotate(30)"/>
    </g>
</svg>
