crates/oxvg_optimiser/src/jobs/snapshots/oxvg_optimiser__jobs__move_group_attrs_to_elems__move_group_attrs_to_elems-5.snap
---
source: crates/oxvg_optimiser/src/jobs/move_group_attrs_to_elems.rs
expression: "test_config(r#\"{ \"moveGroupAttrsToElems\": true }\"#,\nSome(r#\"<svg xmlns=\"http://www.w3.org/2000/svg\">\n    <!-- don't move from group with reference -->\n    <g transform=\"scale(2)\" clip-path=\"url(#a)\">\n        <path d=\"M0,0 L10,20\"/>\n        <path d=\"M0,10 L20,30\"/>\n    </g>\n</svg>\"#),)?"
---
<svg xmlns="http://www.w3.org/2000/svg">
    <!-- don't move from group with reference -->
    <g transform="scale(2)" clip-path="url(#a)">
        <path d="M0 0 10 20"/>
        <path d="M0 10 20 30"/>
    </g>
</svg>
